# arubacx-log-events-pdf-extractor

./: .gitignore  README.md  pyproject.toml  run.py
src/: constants.py  convert_batch_result.py  main.py  openai_requests.py
src/prompts/: sanitize_log_events.txt
